--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "jest": "^29.7.0",
     "nodemon": "^3.0.1",
     "supertest": "^6.3.3",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "ts-node": "^10.9.1"
   },
   "dependencies": {
     "@opentelemetry/api": "^1.7.0",
@@ -40,6 +39,7 @@
     "helmet": "^7.1.0",
     "http-graceful-shutdown": "^3.1.13",
     "pino": "^8.16.2",
-    "request-ip": "^3.3.0"
+    "request-ip": "^3.3.0",
+    "typescript": "^5.2.2"
   }
 }
